integration_tests/codegen_fail/fail/union/enum_same_type_pretty.rs
use juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
enum Character {
    A(u8),
    B(u8),
}

fn main() {}
